--- a/LandingPage.html
+++ b/LandingPage.html
@@ -609,7 +609,7 @@
                     <p
                         class="w-90 md-w-100 sm-w-75 xs-w-100 text-extra-medium text-white opacity-6 line-height-30px margin-35px-bottom md-margin-25px-bottom">
                         Build skills with courses, certificates, and degrees online from world-class universities and
-                        companies.</p>
+                        companies</p>
                     <div class="d-flex flex-lg-row flex-column align-items-lg-center align-items-start">
                         <a href="pricing-packages.html"
                             class="btn btn-extra-large btn-rounded btn-white margin-20px-right md-no-margin-right md-margin-20px-bottom">
